--- a/main/templates/maininclude/header.html
+++ b/main/templates/maininclude/header.html
@@ -37,7 +37,7 @@
 
         {% if not user.is_authenticated %}
           <li><a href="{% url 'account_login' %}">
-            <span class="glyphicon glyphicon-lock"></span> LOGIN</a>
+            <span class="glyphicon glyphicon-user"></span> LOGIN</a>
           </li>
         {% else %}
           <li class="dropdown">
