new dashboard layout

--- a/blog/templates/blogcontent/dashboard.html
+++ b/blog/templates/blogcontent/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "bloginclude/base.html" %}
+<!-- {% extends "bloginclude/base.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %}
@@ -80,4 +80,4 @@
       </div>
     </div>
   </div>
-{% endblock %}
+{% endblock %} -->
