move dashboard into its own app

--- a/main/templates/maininclude/header.html
+++ b/main/templates/maininclude/header.html
@@ -30,7 +30,7 @@
             <span class="glyphicon glyphicon-plus"></span> CREATE BLOG</a>
           </li>
         {% else %}
-          <li><a href="{% url 'blog-dashboard' user.user_blog.slug %}">
+          <li><a href="{% url 'dashboard-blog' user.user_blog.slug %}">
             <span class="glyphicon glyphicon-dashboard"></span> DASHBOARD</a>
           </li>
         {% endif %}
