--- a/dashboard/templates/dashboardcontent/stats.html
+++ b/dashboard/templates/dashboardcontent/stats.html
@@ -1,4 +1,4 @@
-{% extends "bloginclude/dashboard.html" %}
+{% extends "dashboardinclude/dashboard.html" %}
 
 {% block dashboard_content %}
 	Blog Statistics
