--- a/dashboard/templates/dashboardinclude/dashboard.html
+++ b/dashboard/templates/dashboardinclude/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "bloginclude/base.html" %}
+{% extends "dashboardinclude/base.html" %}
 
 
 {% block main %}
@@ -6,15 +6,15 @@
 	<aside class="dashboard-navbar col-sm-2">
 		<ul>
 			<li {% if page == "blog"%}class="active"{% endif %}>
-				<a href="{% url 'blog-dashboard' 'stepsofatravelerlocal' %}">
+				<a href="{% url 'dashboard-blog' 'stepsofatravelerlocal' %}">
 					<span class="glyphicon glyphicon-home"></span> Blog</a>
 			</li>
 			<li {% if page == "posts"%}class="active"{% endif %}>
-				<a href="{% url 'blog-dashboard-posts' 'stepsofatravelerlocal' %}">
+				<a href="{% url 'dashboard-posts' 'stepsofatravelerlocal' %}">
 					<span class="glyphicon glyphicon-edit"></span> Posts</a>
 			</li>
 			<li {% if page == "stats"%}class="active"{% endif %}>
-				<a href="{% url 'blog-dashboard-stats' 'stepsofatravelerlocal' %}">
+				<a href="{% url 'dashboard-stats' 'stepsofatravelerlocal' %}">
 					<span class="glyphicon glyphicon-stats"></span> Stats</a>
 			</li>
 		</ul>
