--- a/internal/templates/internalinclude/header.html
+++ b/internal/templates/internalinclude/header.html
@@ -19,7 +19,7 @@
     {% if not user.profile.user_blog %}
       <li><a href="{% url 'blog-create' %}"><span class="glyphicon glyphicon-plus"></span> Create Blog</a></li>
     {% else %}
-      <li><a href="{% url 'blog-dashboard' user.profile.user_blog.slug %}">Dashboard <span class="glyphicon glyphicon-dashboard"></span></a></li>
+      <li><a href="{% url 'dashboard-blog' user.profile.user_blog.slug %}">Dashboard <span class="glyphicon glyphicon-dashboard"></span></a></li>
     {% endif %}
 
     {% if not user.is_authenticated %}
