--- a/static/css/scss/main.scss
+++ b/static/css/scss/main.scss
@@ -1,9 +1,10 @@
 @import 'variables';
+@import 'bootstrap-custom';
 @import 'general';
 @import 'search';
 @import 'blog';
+@import 'dashboard';
 @import 'accounts';
 
 @import 'addons';
 @import 'brand';
-@import 'bootstrap-custom';
