--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,94 @@
 /* Colors Light to Dark #B1D0DD, #588497, #27576B, #092F3F, #010E13 */
 /***** General *****/
+.thumbnail {
+  padding: 0; }
+
+.status-alert {
+  margin: 10px; }
+
+.container-padding {
+  padding: 25px 0; }
+
+.row-padding {
+  padding: 25px 0; }
+
+.no-gutter {
+  padding-right: 0;
+  padding-left: 0; }
+
+.full-height {
+  height: 100%; }
+
+/***** Jumbotron *****/
+.jumbotron {
+  background-color: #B1D0DD; }
+  .jumbotron h3 {
+    font-size: 30px; }
+
+.jumbotron-clear {
+  background-color: inherit; }
+
+/***** Nav *****/
+.nav img {
+  height: 30px; }
+.nav li a {
+  transition: all 0.3s ease-in-out; }
+  .nav li a:hover {
+    background-color: #588497;
+    color: white; }
+.nav li.active a {
+  background-color: #010E13; }
+  .nav li.active a:hover {
+    background-color: #588497; }
+
+.navbar-brand {
+  padding: 5px; }
+
+.navbar li {
+  font-size: 150%;
+  font-weight: 300; }
+
+.navbar-nav > li.label {
+  padding-top: 15px;
+  padding-bottom: 15px; }
+
+/***** Buttons *****/
+.btn-primary {
+  background-color: #27576B;
+  border-color: #27576B; }
+  .btn-primary:hover {
+    background-color: #588497;
+    border-color: #588497; }
+
+/***** Panels *****/
+.panel-default > div.panel-heading {
+  background-color: #B1D0DD; }
+
+.panel-title {
+  text-align: center; }
+
+/***** Modals *****/
+.modal-header {
+  background-color: #B1D0DD;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px; }
+
+.modal-footer {
+  background-color: #B1D0DD;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px; }
+
+/***** Alerts *****/
+.alert-brand {
+  color: black;
+  background-color: #B1D0DD;
+  border-color: #B3D2DF; }
+  .alert-brand hr {
+    border-top-color: #c9e2b3; }
+  .alert-brand .alert-link {
+    color: black; }
+
+/***** General *****/
 /* sticky footer */
 html, body {
   height: 100%; }
@@ -247,37 +336,6 @@ applied to individual blog posts, those are defined int he Post section
     max-height: 100px;
     display: inline; }
 
-/***** Blog Dashboard *****/
-.dashboard-navbar {
-  height: 100%;
-  background-color: #010E13;
-  color: white;
-  padding: 0; }
-  .dashboard-navbar > ul {
-    list-style: none;
-    text-align: center;
-    font-size: 24px;
-    padding-left: 0;
-    padding-top: 30px; }
-    .dashboard-navbar > ul > li {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      transition: all 0.3s ease-in-out; }
-      .dashboard-navbar > ul > li.active {
-        background-color: #27576B; }
-      .dashboard-navbar > ul > li:hover {
-        background-color: #B1D0DD;
-        color: #010E13; }
-        .dashboard-navbar > ul > li:hover a {
-          color: #010E13; }
-    .dashboard-navbar > ul a {
-      color: white;
-      text-decoration: none;
-      min-width: 100%; }
-
-.dashboard-content {
-  padding: 30px; }
-
 /***** Post *****/
 .post-list-container {
   padding: 30px; }
@@ -327,6 +385,40 @@ applied to individual blog posts, those are defined int he Post section
 @media (max-width: 768px) {
   #post-body .img-half {
     display: none; } }
+/***** Blog Dashboard *****/
+.dashboard-navbar {
+  height: 100%;
+  background-color: #010E13;
+  color: white;
+  padding: 0; }
+  .dashboard-navbar > ul {
+    list-style: none;
+    text-align: center;
+    font-size: 24px;
+    padding-left: 0;
+    padding-top: 30px; }
+    .dashboard-navbar > ul > li {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      transition: all 0.3s ease-in-out; }
+      .dashboard-navbar > ul > li.active {
+        background-color: #27576B; }
+      .dashboard-navbar > ul > li:hover {
+        background-color: #B1D0DD;
+        color: #010E13; }
+        .dashboard-navbar > ul > li:hover a {
+          color: #010E13; }
+    .dashboard-navbar > ul a {
+      color: white;
+      text-decoration: none;
+      min-width: 100%; }
+
+.dashboard-content {
+  padding: 30px; }
+
+.nav-posts {
+  font-size: 20px; }
+
 /***** Registration *****/
 .account-container {
   text-align: center; }
@@ -370,85 +462,5 @@ applied to individual blog posts, those are defined int he Post section
   list-style-type: none;
   padding-left: 0;
   width: 1px; }
-
-/***** General *****/
-.thumbnail {
-  padding: 0; }
-
-.status-alert {
-  margin: 10px; }
-
-.container-padding {
-  padding: 25px 0; }
-
-.row-padding {
-  padding: 25px 0; }
-
-.no-gutter {
-  padding-right: 0;
-  padding-left: 0; }
-
-.full-height {
-  height: 100%; }
-
-/***** Jumbotron *****/
-.jumbotron {
-  background-color: #B1D0DD; }
-  .jumbotron h3 {
-    font-size: 30px; }
-
-.jumbotron-clear {
-  background-color: inherit; }
-
-/***** Nav *****/
-.nav img {
-  height: 30px; }
-
-.navbar-brand {
-  padding: 5px; }
-
-.navbar li {
-  font-size: 150%;
-  font-weight: 300; }
-
-.navbar-nav > li.label {
-  padding-top: 15px;
-  padding-bottom: 15px; }
-
-/***** Buttons *****/
-.btn-primary {
-  background-color: #27576B;
-  border-color: #27576B; }
-  .btn-primary:hover {
-    background-color: #588497;
-    border-color: #588497; }
-
-/***** Panels *****/
-.panel-default > div.panel-heading {
-  background-color: #B1D0DD; }
-
-.panel-title {
-  text-align: center; }
-
-/***** Modals *****/
-.modal-header {
-  background-color: #B1D0DD;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px; }
-
-.modal-footer {
-  background-color: #B1D0DD;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px; }
-
-/***** Alerts *****/
-.alert-brand {
-  color: black;
-  background-color: #B1D0DD;
-  border-color: #B3D2DF; }
-  .alert-brand hr {
-    border-top-color: #c9e2b3; }
-  .alert-brand .alert-link {
-    color: black; }
 
 /*# sourceMappingURL=style.css.map */
