--- a/dashboard/templates/dashboardcontent/posts.html
+++ b/dashboard/templates/dashboardcontent/posts.html
@@ -3,7 +3,21 @@
 {% block dashboard_content %}
 	{% include 'dashboardinclude/posts_nav.html' %}
 
-	{% for post in object_list %}
-		<p>{{post.title}} - <a href="{{post.get_update_url}}">Edit</a></p>
-	{% endfor %}
+	<table class="table table-striped table-bordered table-hover table-posts">
+	<tbody data-link="row" class="rowlink">
+		{% for post in object_list %}
+    	<tr>
+    		<td class="image-cell">
+    			<a href="{{ post.get_update_url }}">
+    				<img src="{{ post.image.url }}" class="img-responsive"/>
+    			</a>
+    		</td>
+    		<td>
+    			<h2>{{ post.title }}</h2>
+    			<p class="mute">{{ post.headline }}</p>
+    		</td>
+    	</tr>
+    {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
