--- a/static/css/scss/_general.scss
+++ b/static/css/scss/_general.scss
@@ -43,6 +43,9 @@ legend h1 {
 .no-padding {
   padding:0;
 }
+.mute {
+  opacity: 0.6;
+}
 #navbar-main {
   border-radius:0;
   background-color:$brand-darkest;
