--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,6 +130,9 @@ legend h1 {
 .no-padding {
   padding: 0; }
 
+.mute {
+  opacity: 0.6; }
+
 #navbar-main {
   border-radius: 0;
   background-color: #010E13;
@@ -416,6 +419,10 @@ applied to individual blog posts, those are defined int he Post section
   padding: 30px; }
   .dashboard-content .well-post {
     margin-top: 15px; }
+  .dashboard-content .table-posts {
+    margin-top: 15px; }
+    .dashboard-content .table-posts .image-cell {
+      max-width: 100px; }
 
 .nav-posts {
   font-size: 20px; }
