--- a/dashboard/templates/dashboardcontent/stats.html
+++ b/dashboard/templates/dashboardcontent/stats.html
@@ -1,5 +1,7 @@
 {% extends "dashboardinclude/dashboard.html" %}
 
 {% block dashboard_content %}
-	Blog Statistics
+	<h1 class="jumbotron text-center">
+		<span class="glyphicon glyphicon-wrench"></span> Coming Soon <span class="glyphicon glyphicon-wrench"></span> 
+	</h1>
 {% endblock %}
