--- a/static/css/scss/_dashboard.scss
+++ b/static/css/scss/_dashboard.scss
@@ -38,6 +38,8 @@
     }
   }
 }
+
+
 .dashboard-content {
   padding: 30px; 
 
@@ -53,6 +55,37 @@
     }
   }
 }
+
 .nav-posts {
   font-size: 20px;
+}
+
+.dashboard-stats {
+  text-align: center;
+
+  label {
+    font-size: 20px;
+    opacity: 0.7;
+  }
+
+  content {
+    font-size: 80px;
+    font-weight: 300;
+    display: block;
+  }
+
+  section {
+    transition: $transition;
+    border-radius: 20px;
+
+    &:hover {
+      background-color: $brand-medium;
+      color: white;
+      cursor: default;
+    }
+  }
+
+  .row {
+    margin-top: 30px;
+  }
 }
