--- a/dashboard/templates/dashboardcontent/stats.html
+++ b/dashboard/templates/dashboardcontent/stats.html
@@ -4,34 +4,34 @@
 	<div class="dashboard-stats">
 		<div class="row">
 			<section class="col-sm-4">
-				<content>781</content>
+				<content>{{ object.today_view_count }}</content>
 				<label>Views Today</label>
 			</section>
 
 			<section class="col-sm-4">
-				<content>1038</content>
+				<content>{{ object.week_view_count }}</content>
 				<label>Week Views</label>
 			</section>
 
 			<section class="col-sm-4">
-				<content>8293</content>
+				<content>{{ object.total_view_count }}</content>
 				<label>Total Views</label>
 			</section>
 		</div>
 
 		<div class="row">
 			<section class="col-sm-4">
-				<content>22</content>
+				<content>{{ object.article_count }}</content>
 				<label>Articles</label>
 			</section>
 
 			<section class="col-sm-4">
-				<content>94</content>
+				<content>{{ object.subscription_count }}</content>
 				<label>Subscribers</label>
 			</section>
 
 			<section class="col-sm-4">
-				<content>283</content>
+				<content>83</content>
 				<label>Awesomeness</label>
 			</section>
 		</div>
