--- a/dashboard/templates/dashboardcontent/blog.html
+++ b/dashboard/templates/dashboardcontent/blog.html
@@ -4,9 +4,11 @@
 {% block dashboard_content %}
   {% include "maininclude/tinymce.html" %}
 
-  <h1 class="jumbotron text-center" style="border-radius:15px;">
-  	{{ object.title }} Dashboard
-  </h1>
+  <div class="jumbotron text-center">
+    <h2>
+  	   {{ object.title }} Dashboard
+    </h2>
+  </div>
 
   <div class="well well-post">
     {% include "maininclude/form_status.html" %}
