--- a/dashboard/templates/dashboardcontent/stats.html
+++ b/dashboard/templates/dashboardcontent/stats.html
@@ -31,7 +31,7 @@
 			</section>
 
 			<section class="col-sm-4">
-				<content>83</content>
+				<content>{{ object.awesomeness }}</content>
 				<label>Awesomeness</label>
 			</section>
 		</div>
