logos blog desc

--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -23,7 +23,7 @@
     </div>
     <div class="col-sm-offset-1 col-sm-10">
       <div class="row row-padding">
-        <div class="text-center btn btn-primary btn-block" data-toggle="modal" data-target="#blog-info-modal">Read Blog Details</div>
+        <div class="text-center btn btn-primary btn-block" data-toggle="modal" data-target="#blog-info-modal">About {{object}}</div>
       </div>
       <div class="row well">
         {% for thumbnail_post in posts %}
