--- a/blog/templates/bloginclude/modals/blog_info.html
+++ b/blog/templates/bloginclude/modals/blog_info.html
@@ -3,9 +3,9 @@
 {% block modal_id %}blog-info-modal{% endblock %}
 
 {% block modal_title %}
-  {{ blog.title }}
+  {{ object.title }}
 {% endblock %}
 
 {% block modal_body %}
-  {{ blog.description|safe }}
+  {{ object.description|safe }}
 {% endblock %}
