stats/blog dashboard

--- a/dashboard/templates/dashboardcontent/blog.html
+++ b/dashboard/templates/dashboardcontent/blog.html
@@ -7,6 +7,9 @@
   <div class="jumbotron text-center">
     <h2>
   	   {{ object.title }} Dashboard
+       <a href="{{object.get_absolute_url}}" class="btn btn-primary">
+         View Blog <i class="glyphicon glyphicon-share-alt"></i>
+       </a>
     </h2>
   </div>
 
