--- a/dashboard/templates/dashboardcontent/stats.html
+++ b/dashboard/templates/dashboardcontent/stats.html
@@ -14,8 +14,8 @@
 			</section>
 
 			<section class="col-sm-4">
-				<content>{{ object.total_view_count }}</content>
-				<label>Total Views</label>
+				<content>{{ object.month_view_count }}</content>
+				<label>Month Views</label>
 			</section>
 		</div>
 
