--- a/static/css/scss/_blog.scss
+++ b/static/css/scss/_blog.scss
@@ -41,6 +41,11 @@ applied to individual blog posts, those are defined int he Post section
 .post-list-container  {
   padding:30px;
 
+  a{
+    text-decoration: none;
+    font-weight: bold;
+  }
+
   img {
 	  opacity:0.9;
 
