--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,7 +196,7 @@ img {
   margin-right: auto; }
 
 .img-info-window {
-  width: 100%; }
+  width: 300px; }
 
 /***** social *****/
 .social-buttons img, .social-icons img {
