--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -43,7 +43,9 @@
             <div id="post-body">
               {{ post.body|safe }}
             </div>
-            <h4 class="text-center alert alert-brand">Read more from <a href="{{ post.blog.get_absolute_url }}">{{ post.blog }}</a></h4>
+            <h4 class="text-center"><a class="btn btn-lg btn-primary" href="{{ post.blog.get_absolute_url }}">
+              Read more from {{ post.blog }}
+            </a></h4>
           </div>
           <div class="row">
             {% with post.get_prev_blog_post as thumbnail_post %}
