--- a/main/templates/allauth/account/login.html
+++ b/main/templates/allauth/account/login.html
@@ -7,23 +7,20 @@
 {% block title %}{% trans "Sign In" %}{% endblock %}
 
 {% block main %}
-  <div class="container account-container">
+  <div class="container-fluid account-container">
     <div class="col-md-6 col-md-offset-3">
-      <div class="panel panel-default margin-top">
+      <div class="panel margin-top">
         <div class="panel-heading">
           <h1>{% trans "Sign In" %}</h1>
         </div>
         <div class="panel-body">
           {% if socialaccount.providers  %}
-          <p>{% blocktrans with site.name as site_name %}Please sign in with one
-          of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-          for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
+          <p>Don't have an account yet? <a href="{{ signup_url }}">Sign Up</a></p>
 
           <div class="socialaccount_ballot">
             <div class="socialaccount_providers row">
             {% include "socialaccount/snippets/provider_list.html" with process="login" %}
             </div>
-            <div class="login-or">{% trans 'or' %}</div>
           </div>
 
           {% include "socialaccount/snippets/login_extra.html" %}
@@ -40,7 +37,7 @@
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
             <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-            <button type="submit" class="btn btn-primary">{% trans "Sign In" %}</button>
+            <button type="submit" class="btn btn-primary btn-lg">{% trans "Sign In" %}</button>
           </form>
         </div>
       </div>
