--- a/main/templates/allauth/account/password_reset.html
+++ b/main/templates/allauth/account/password_reset.html
@@ -7,9 +7,9 @@
 {% block title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block main %}
-<div class="container account-container">
+<div class="container-fluid account-container">
   <div class="col-md-6 col-md-offset-3">
-    <div class="panel panel-default margin-top">
+    <div class="panel margin-top">
       <div class="panel-heading">
         <h1>{% trans "Password Reset" %}</h1>
       </div>
@@ -23,7 +23,7 @@
         <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
           {% csrf_token %}
           {{ form.as_p }}
-          <button type="submit" class="btn btn-primary">{% trans "Reset My Password" %}</button>
+          <button type="submit" class="btn btn-primary btn-lg">{% trans "Reset My Password" %}</button>
         </form>
 
         <p class="margin-top">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
