--- a/main/templates/allauth/account/signup.html
+++ b/main/templates/allauth/account/signup.html
@@ -6,9 +6,9 @@
 {% block title %}{% trans "Signup" %}{% endblock %}
 
 {% block main %}
-<div class="container account-container">
+<div class="container-fluid account-container">
   <div class="col-md-6 col-md-offset-3">
-    <div class="panel panel-default margin-top">
+    <div class="panel margin-top">
       <div class="panel-heading">
         <h1>{% trans "Sign Up" %}</h1>
       </div>
@@ -19,7 +19,6 @@
           <div class="socialaccount_providers row">
             {% include "socialaccount/snippets/provider_list.html" with process="login" %}
           </div>
-          <div class="login-or">{% trans 'or' %}</div>
         </div>
 
         <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
@@ -28,12 +27,10 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button type="submit" class="btn btn-primary">{% trans "Sign Up" %}</button>
+          <button type="submit" class="btn btn-primary btn-lg">{% trans "Sign Up" %}</button>
         </form>
       </div>
     </div>
   </div>
 </div>
 {% endblock %}
-
-
