--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -33,7 +33,12 @@
 
         <div class="col-sm-8">
           <div class="row">
-            <h1 id="post-title">{{ post.title }}</h1>
+            <h1 id="post-title">
+              {{ post.title }}
+              {% if request.user == post.author %}
+                <a href="{{post.get_update_url}}"><span class="glyphicon glyphicon-edit"></span></a>
+              {% endif %}
+            </h1>
             {% if post.image %}
               <img src="{{ post.image.url }}" class="img-responsive" id="post-main-image" alt="{{ post.image_description }}"/>
             {% endif %}
