--- a/main/templates/maininclude/header.html
+++ b/main/templates/maininclude/header.html
@@ -1,6 +1,6 @@
 {% load static from staticfiles %}
 
-<nav class="navbar navbar-inverse" id="navbar-main" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" id="navbar-main" role="navigation">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
