--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,6 +1,7 @@
 {% extends "bloginclude/base.html" %}
 
 {% block body %}
+  <i class="material-icons">accessibility</i>
   {% for blog in personalblog_list %}
     <p><a href="{{blog.get_absolute_url}}">{{blog}}</a></p>
   {% endfor %}
