--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -2,6 +2,7 @@
 
 {% block body %}
   <h2>{{post.title}}</h2>
+  <img src="{{post.image.url}}">
   <p>{{post.body|safe}}</p>
   <a href="{{post.blog.get_absolute_url}}">{{post.blog}}</a>
   <a href="{% url 'blog-home' %}">Blog Home</a>
