--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -9,6 +9,7 @@
 
       <link rel="stylesheet" href="{% static 'Materialize/dist/css/materialize.min.css' %}">
       <link rel="stylesheet" href="{% static 'css/style.css' %}">
+      <link rel="shortcut icon" href="{% static 'img/logo.ico' %}">
 
     {% endblock %}
   </head>
