--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -7,8 +7,7 @@
       <meta charset="utf-8">
       <title>Travel Blog Wave</title>
 
-      <link rel="stylesheet" href="{% static 'Materialize/dist/css/materialize.min.css' %}">
-      <link rel="stylesheet" href="{% static 'css/style.css' %}">
+      <link rel="stylesheet" href="{% static 'css/style.min.css' %}">
       <link rel="shortcut icon" href="{% static 'img/logo.ico' %}">
 
     {% endblock %}
