--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,6 +1,73 @@
 {% extends "maininclude/base.html" %}
 
 {% block body %}
-  This is the home page
-  <a href="{% url 'blog-home' %}">Blog Home</a>
+  <div class="home">
+    <section class="header no-padding">
+      <div class="parallax-container">
+        <div class="parallax"><img src="//placehold.it/1200x600"></div>
+      </div>
+      <div class="">
+        <nav>
+          <div class="nav-wrapper">
+            <a href="#" class="brand-logo center">Logo</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+              <li><a href="sass.html">Sass</a></li>
+              <li><a href="badges.html">Components</a></li>
+              <li><a href="collapsible.html">JavaScript</a></li>
+            </ul>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="sass.html">Sass</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </section>
+
+    <section class="summary">
+      <h2 class="section-heading">Summary</h2>
+    </section>
+
+    <section class="user-actions">
+      <h2 class="section-heading">User Actions</h2>
+    </section>
+
+    <section class="map">
+      <h2 class="section-heading">Map</h2>
+    </section>
+
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
+  </div>
+{% endblock %}
+
+{% block js %}
+  {{block.super}}
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('.parallax').parallax();
+    });
+  </script>
 {% endblock %}
