--- a/static/scss/tbwave.scss
+++ b/static/scss/tbwave.scss
@@ -1,23 +1,33 @@
+@import 'variables';
+@import 'materialize/materialize';
+@import 'fonts';
 
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(http://fonts.gstatic.com/s/materialicons/v7/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+
+/*
+  1. Global
+  2. Main
+  3. Blog
+*/
+
+
+// ===== 1. GLOBAL ===== //
+img {
+  width: 100%;
+  height: auto;
 }
 
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  word-wrap: normal;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
+.no-padding {
+  padding: 0;
 }
+
+
+// ===== 2. MAIN ===== //
+.home {
+  section {
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
+}
+
+
+// ===== 3. BLOG ===== //
