--- a/static/scss/tbwave.scss
+++ b/static/scss/tbwave.scss
@@ -27,6 +27,21 @@ img {
     padding-top: 1em;
     padding-bottom: 1em;
   }
+
+  nav {
+    background-color: rgba(0,0,0,0.7);
+  }
+
+  .section-heading {
+    width: 100%;
+    text-align: center;
+    font-weight: 200;
+  }
+
+  #home-map {
+    width: 100%;
+    height: 400px;
+  }
 }
 
 
